<resources>
    <string name="app_name">Number Sprinter</string>


    <string name="wtf">WTF??????</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_about_info">NUMBER SPRINTER GAME\nd2e DEVELOPMENT &#169;2015\nvisit us: d2edev.github.io</string>
    <string name="tWelcome">Welcome to the GAME!</string>
    <string name="tRules">Rules are simple: You\'ll get numbers located randomly. Your target is to select them in acsending order. Upon completion your time is fixed. The one with smallest time is the winner!!! (Hard level: numbers and background will be ramdomly coloured as well). Good luck!</string>
    <string name="btnPlay">Play</string>
    <string name="btnResults">Results</string>
    <string name="tEnterNewPlayer">Enter NEW Player:</string>
    <string name="tNewName">Your NAME here</string>
    <string name="tEmptyName">Name can\'t be empty!</string>
    <string name="tPlsRetypePass">Please retype roundTime!</string>
    <string name="tEmptyPass">Password can\'t be empty!</string>
    <string name="tShortPass">Password should be 6 chars min!</string>
    <string name="tLoginOK">Login OK!</string>
    <string name="tNoRecords">Sorry, no records yet!</string>
    <string name="tOK">OK!</string>
    <string name="tAchievers">Achievers:</string>
    <string name="tSelectPlayer">Select player</string>
    <string name="tElapsedTime">Elapsed Time: </string>
    <string name="tPrsNewToEnterNew">(press New Player to enter new one)</string>
    <string name="tSelected">Selected:</string>
    <string name="tGamesPlayed">Total games played: </string>
    <string name="tAverageScore">Average score: </string>
    <string name="btnNewPlr">New</string>
    <string name="tDefaultPlayer">Default Player</string>
    <string name="btnNewGame"> New game </string>
    <string name="btnStop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tLetsStart">Let\'s start!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="tLogin">Login</string>
    <string name="tEnterYourName">Enter your NAME</string>
    <string name="tPlsSelectPlayer">Pls select player from list and press OK or press NEW to enter new one.</string>
    <string name="tPasss">Your roundTime here</string>
    <string name="tEnterPassword">Enter PASSWORD</string>
    <string name="tRetypePassword">Retype PASSWORD</string>
    <string name="tError">Error!</string>
    <string name="btnSignup">Sign up</string>
    <string name="tHardMode">Play hard mode</string>
    <string name="tPassMisMatch">Passwords doesn\'t match!</string>
    <string name="tPassWrong">Wrong roundTime. Please try again.</string>
    <string name="tCurrentPlayer">Player:</string>
    <string name="tInstrGO">Press NEW GAME for a new round or press back for main screen.</string>
    <string name="tRoundOver">round is over!</string>
    <string name="tScoreRecord">Your new record!!!!! Round score is: </string>
    <string name="tScore">Round score is: </string>
    <string name="tTotalScore">Total score is: </string>
    <string name="tDubbedUser">User with this name already exists!</string>
    <string name="tCantChangeSettings">Can\'t change settings during the game!</string>
    <string name="VIBRATE" translatable="false">vbr</string>
    <string name="MATRIX_SIZE" translatable="false">mxsize</string>
    <string name="sVIBRATE">Should device vibrate at key game events</string>
    <string name="tVIBRATE">Vibrate</string>
    <string name="HARD_MODE" translatable="false">h_mode</string>
    <string name="sHARD_MODE">Makes gaming harder</string>
    <string name="tHARD_MODE">HARD mode</string>

    <string name="CLR_NUMS" translatable="false">cnums</string>
    <string name="sCLR_NUMS">Numbers will be randomly coloured</string>
    <string name="tCLR_NUMS">Random NUMBER colors</string>
    <string name="CLR_FLDS" translatable="false">cfields</string>
    <string name="sCLR_FLDS">Fields will be randomly coloured</string>
    <string name="tCLR_FLDS">Random FIELD colors</string>
    <string name="btnGoMainScreen">Main</string>
    <string name="btnRules">Rules</string>
    <string name="Matrix_2">Change my pants (2x2)</string>
    <string name="Matrix_3">Just baby (3x3)</string>
    <string name="Matrix_4">Still growing (4x4)</string>
    <string name="Matrix_5">True adult (5x5)</string>
    <string name="Matrix_6">Hard boiled (6x6)</string>
    <string name="Matrix_7">Genius or Idiot :) (7x7)</string>
    <string name="tComplexity">Complexity</string>
    <string name="tComplexityTitle">Game field decides all</string>
    <string name="NIGHT_MODE" translatable="false">nmode</string>
    <string name="sNGHT_MD">Dark theme to play at night</string>
    <string name="tNGHT_MD">Night Mode</string>


</resources>
