<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.home.d2e.numbersprinter.LoginControlsFragment"
    android:gravity="center"
    android:orientation="vertical"
    >

    <!-- TODO: Update blank fragment layout -->

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tHardMode"
        android:id="@+id/cbHard"
        android:layout_gravity="center_horizontal"
        android:checked="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tvSelectedPlayer"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPass"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tEnterPassword"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="12sp"
        android:textIsSelectable="false"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_buttons"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tOK"
            android:id="@+id/btnPlayerOK" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNewPlr"
            android:id="@+id/btnPlayerNew"
            android:clickable="false"
            android:elegantTextHeight="false"
            android:enabled="true" />

    </LinearLayout>

</LinearLayout>
