<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.home.d2e.numbersprinter.StartFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/Fragment_start"
    >


    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/ivLogo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/penguins01"
        android:layout_margin="10dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnPlay"
        android:id="@+id/btnPlay"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnRules"
        android:id="@+id/btnRules"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btnResults"
        android:id="@+id/btnResults"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

</LinearLayout>
