<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.home.d2e.numbersprinter.SignUpFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    >

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etName"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tEnterYourName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPass"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tEnterPassword" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/etEmail"
        android:layout_gravity="center_horizontal"
        android:hint="@string/tEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSignup"
        android:id="@+id/btSignup"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
