<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="org.home.d2e.numbersprinter.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSelectPlayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/tPlsSelectPlayer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ListView
            android:id="@+id/lvPlayers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvSelectedPlayer"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPass"
            android:layout_gravity="center_horizontal"
            android:hint="@string/tEnterPassword"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="12sp"
            android:textIsSelectable="false"
            android:layout_marginTop="5dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tHardMode"
            android:id="@+id/cbHard"
            android:layout_gravity="center_horizontal"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_buttons"
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tOK"
            android:id="@+id/btnPlayerOK" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNewPlr"
            android:id="@+id/btnPlayerNew"
            android:clickable="false"
            android:elegantTextHeight="false"
            android:enabled="true" />

    </LinearLayout>


</LinearLayout>
