<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.home.d2e.numbersprinter.GameEndActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tDefaultPlayer"
        android:id="@+id/txtv_Player"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="YOUR RESULT IS: 12.34s"
        android:id="@+id/txtv_Result"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/txtv_Player"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNewGame"
        android:id="@+id/btn_NewGame"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/txtv_Player"
        android:layout_toStartOf="@+id/txtv_Player"
        android:layout_marginBottom="34dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGoMainScreen"
        android:id="@+id/btn_GoMainScreen"
        android:layout_alignBottom="@+id/btn_NewGame"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
