<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.home.d2e.numbersprinter.GameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tDefaultPlayer"
        android:id="@+id/txtv_Player"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tElapsedTime"
        android:id="@+id/txtv_Time"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/txtv_Player"
        android:layout_centerHorizontal="true" />

    <GridLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:columnCount="5"
        android:rowCount="5"
        android:alignmentMode="alignMargins"
        android:layout_marginTop="140dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button21"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button22"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button23"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button24"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button25"
            android:layout_row="0"
            android:layout_column="4"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button16"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button17"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button18"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button19"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button20"
            android:layout_row="1"
            android:layout_column="4"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button11"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button12"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button13"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button14"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button15"
            android:layout_row="2"
            android:layout_column="4"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button5"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button2"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button3"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button4"
            android:layout_row="3"
            android:layout_column="4"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button6"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button7"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button8"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button9"
            android:layout_row="4"
            android:layout_column="3"
            android:layout_margin="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="22"
            android:id="@+id/button10"
            android:layout_row="4"
            android:layout_column="4"
            android:layout_margin="5dp" />

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStop"
        android:id="@+id/btn_Cancel"
        android:layout_below="@+id/txtv_Time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

</RelativeLayout>
